updated active route css

--- a/.gitignore
+++ b/.gitignore
@@ -20,15 +20,6 @@ yarn-error.log
 .settings/
 *.sublime-workspace
 
-# Visual Studio Code
-/vscode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
 # Miscellaneous
 /angular
 /.angular/cache
@@ -42,3 +33,13 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Visual Studio Code
+.vscode
+/vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
