--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,13 @@ Thumbs.db
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+
+# Firebase
+.firebase
+*-debug.log
+.runtimeconfig.json
+.firebaserc
+firebase.json
+src/environments
+src/environments/environment.prod.ts
+src/environments/environment.ts
