- last minute changes - added ability to mass import guest list

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ firebase.json
 src/environments
 src/environments/environment.prod.ts
 src/environments/environment.ts
+wedding-website-bf9a3-44d379003ebf.json
